328 As a developer I want to fix the QR scanner on ios devices (#331)
* fix typos on wallets modal

* refactor insertTxs

* mark change addresses as used when utxo is spent

* refactor  refreshBitcoin

* disable wallet if enableWallet fails

* fix errHandler to use Notify instead of toaster plugin

* update errorHandler unit tests

* only set selectedAccount if at least one account exists

* handle account discovery errors gracefully

* improve offline functionality

* add timezone to jest unit tests

* stop hanging in setup complete step

* update qrscanner plugin

* fix SendBitcoin unit tests

* catch errors inside setTimeout on Complete

* compile to swift 5 on ios

* add loading screen component

* Fix scroll behind toolbar on ios

* update snapshots

* disable android auto backup

* fix wallets modal loading screen

* update unit tests

--- a/src/css/app.styl
+++ b/src/css/app.styl
@@ -134,6 +134,12 @@ button.q-btn[disabled] {
 .q-pull-to-refresh-wrapper .layout-wrapper {
   padding-top: 0;
   height: calc(100vh - 2.5rem);
+  @supports (height: constant(safe-area-inset-top)) {
+    height: calc((100vh - 2.5rem) - constant(safe-area-inset-top));
+  }
+  @supports (height: env(safe-area-inset-top)) {
+    height: calc((100vh - 2.5rem) - env(safe-area-inset-top));
+  }
 }
 
 .layout-wrapper > div,
